--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.12.10",
     "next": "13.4.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9"
   }
 }
