--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.11.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase": "^9.22.0",
+    "firebase-admin": "^11.8.0",
     "framer-motion": "^10.12.10",
     "next": "13.4.2",
     "react": "18.2.0",
