--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@next-auth/firebase-adapter": "^2.0.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "firebase": "^9.22.0",
     "firebase-admin": "^11.8.0",
     "framer-motion": "^10.12.10",
     "next": "13.4.2",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9"
